<resources>
    <string name="app_name">IDEEO</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="nuevo_usuario">¿Eres nuevo, Crea tu cuenta!?</string>
    <string name="olvido_contraseña">¿Se te ha olvidado la contraseña?</string>
    <string name="channel_name">a</string>
    <string name="channel_description">aa</string>
    <string name="no_part">No. Parte</string>
    <string name="nom_part">Nombre</string>
    <string name="Ubicacion_part">Ubicación</string>
    <string name="descrip_part">Descripción</string>
    <string name="usuario_contraseña_invalida">Usuario / Contraseña Invalida.</string>
    <string name="en_construccion">En contrucción...</string>
    <string name="campos_vacios">Los campos tienen que estar llenos.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="principal">Principal</string>
    <string name="cargando">Cargando...</string>
</resources>
