<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="ideo.com.ideo.ui.login.LoginFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_ideeo_icon"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:theme="@style/AppThemeWhite"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietUser"
            android:theme="@style/AppThemeWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/usuario"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:theme="@style/AppThemeWhite"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:hint="@string/contraseña"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvUser"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_gravity="right"
        android:fontFamily="?android:textAppearanceLarge"
        android:text="@string/nuevo_usuario"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:theme="@style/RaisedButton"
        android:text="@string/iniciar_sesion"
        />

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:fontFamily="?android:textAppearanceLarge"
        android:text="@string/olvido_contraseña"
        android:layout_marginBottom="15dp"/>

</LinearLayout>
