<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context="ideo.com.ideo.ui.login.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_ideeo_icon"
            android:layout_marginBottom="15dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:foregroundTint="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietUser"
                android:foregroundTint="@android:color/white"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:shadowColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:foregroundTint="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietPass"
                android:foregroundTint="@android:color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:shadowColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_gravity="right"
            android:fontFamily="?android:textAppearanceLarge"
            android:text="@string/nuevo_usuario"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:background="@color/accent"
            android:text="@string/iniciar_sesion"
            />

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:fontFamily="?android:textAppearanceLarge"
            android:text="@string/olvido_contraseña"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
