<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context="ideo.com.ideo.ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_ideeo_color" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="@android:color/black"
            android:textColorHint="@android:color/black">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/no_parte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/black"
                android:drawableLeft="@drawable/baseline_assignment_turned_in_black_18dp"
                android:drawablePadding="5dp"
                android:foregroundTint="@android:color/black"
                android:hint="@string/no_part"
                android:shadowColor="@android:color/black"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="@android:color/black"
            android:textColorHint="@android:color/black">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nom_parte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/black"
                android:drawableLeft="@drawable/baseline_description_black_18dp"
                android:drawablePadding="5dp"
                android:foregroundTint="@android:color/black"
                android:hint="@string/nom_part"
                android:shadowColor="@android:color/black"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="@android:color/black"
            android:textColorHint="@android:color/black">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Ubicacion_parte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/black"
                android:drawableLeft="@drawable/baseline_touch_app_black_18dp"
                android:drawablePadding="5dp"
                android:foregroundTint="@android:color/black"
                android:hint="@string/Ubicacion_part"
                android:shadowColor="@android:color/black"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="@android:color/black"
            android:textColorHint="@android:color/black">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/desc_parte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/black"
                android:drawableLeft="@drawable/baseline_chrome_reader_mode_black_18dp"
                android:drawablePadding="5dp"
                android:foregroundTint="@android:color/black"
                android:hint="@string/descrip_part"
                android:shadowColor="@android:color/black"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/black" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>